external-crates/move/crates/move-compiler/tests/move_check/locals/unused_resource_explicit_return.exp
error[E05001]: ability constraint not satisfied
  ┌─ tests/move_check/locals/unused_resource_explicit_return.move:5:13
  │
2 │     struct R {}
  │            - To satisfy the constraint, the 'drop' ability would need to be added here
  ·
5 │         let _ = R{};
  │             ^   --- The type '0x8675309::M::R' does not have the ability 'drop'
  │             │    
  │             Cannot ignore values without the 'drop' ability. The value must be used

error[E06001]: unused value without 'drop'
   ┌─ tests/move_check/locals/unused_resource_explicit_return.move:11:21
   │
 2 │     struct R {}
   │            - To satisfy the constraint, the 'drop' ability would need to be added here
   ·
10 │         let r = R {};
   │             -   ---- The type '0x8675309::M::R' does not have the ability 'drop'
   │             │    
   │             The local variable 'r' still contains a value. The value does not have the 'drop' ability and must be consumed before the function returns
11 │         if (cond) { return () };
   │                     ^^^^^^^^^ Invalid return

error[E06001]: unused value without 'drop'
   ┌─ tests/move_check/locals/unused_resource_explicit_return.move:17:29
   │
 2 │     struct R {}
   │            - To satisfy the constraint, the 'drop' ability would need to be added here
   ·
16 │         let r = R{};
   │             -   --- The type '0x8675309::M::R' does not have the ability 'drop'
   │             │    
   │             The local variable 'r' still contains a value. The value does not have the 'drop' ability and must be consumed before the function returns
17 │         if (cond) {} else { return () };
   │                             ^^^^^^^^^ Invalid return

error[E06001]: unused value without 'drop'
   ┌─ tests/move_check/locals/unused_resource_explicit_return.move:23:24
   │
 2 │     struct R {}
   │            - To satisfy the constraint, the 'drop' ability would need to be added here
   ·
22 │         let r = R {};
   │             -   ---- The type '0x8675309::M::R' does not have the ability 'drop'
   │             │    
   │             The local variable 'r' still contains a value. The value does not have the 'drop' ability and must be consumed before the function returns
23 │         while (cond) { return () };
   │                        ^^^^^^^^^ Invalid return

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/locals/unused_resource_explicit_return.move:28:13
   │
 2 │     struct R {}
   │            - To satisfy the constraint, the 'drop' ability would need to be added here
   ·
28 │         let _ = R{};
   │             ^   --- The type '0x8675309::M::R' does not have the ability 'drop'
   │             │    
   │             Cannot ignore values without the 'drop' ability. The value must be used

error[E06001]: unused value without 'drop'
   ┌─ tests/move_check/locals/unused_resource_explicit_return.move:34:9
   │
 2 │     struct R {}
   │            - To satisfy the constraint, the 'drop' ability would need to be added here
   ·
33 │         let _ = &R{};
   │                  ---
   │                  │
   │                  The value is created but not used. The value does not have the 'drop' ability and must be consumed before the function returns
   │                  The type '0x8675309::M::R' does not have the ability 'drop'
34 │         return ()
   │         ^^^^^^^^^ Invalid return

error[E06001]: unused value without 'drop'
   ┌─ tests/move_check/locals/unused_resource_explicit_return.move:38:9
   │
 2 │     struct R {}
   │            - To satisfy the constraint, the 'drop' ability would need to be added here
   ·
37 │     fun t6<T>(_x: R) {
   │               --  - The type '0x8675309::M::R' does not have the ability 'drop'
   │               │    
   │               The parameter '_x' still contains a value. The value does not have the 'drop' ability and must be consumed before the function returns
38 │         return ()
   │         ^^^^^^^^^ Invalid return

